# skynet-studio

./: CMakeLists.txt  README.md  buildroot.cmake  cmake.sh
gui/: CMakeLists.txt  HomeView.qml  LabelComboBox.qml  LabelSpinBox.qml  LabelSwitch.qml  Sensor.qml  SystemOptionView.qml  Watertower.qml  WatertowerOptionView.qml  main.qml  qml.qrc
src/: CMakeLists.txt  S80skynet  abstractdatalinker.cpp  abstractdatalinker.h  daemon.cpp  daemon.h  halfduplexlinker.cpp  halfduplexlinker.h  main-sensor.cpp  main.cpp  options.cpp  options.h  os.h  os_linux.c  sensor.cpp  sensor.h  serialdatalinker.cpp  serialdatalinker.h  settings.cpp  settings.h  stdio.c  testdatalinker.cpp  testdatalinker.h  unittest.cpp  utility.c  utility.h  watertower.cpp  watertower.h  watertowermodel.cpp  watertowermodel.h
